Fixed text overflow in mcq container when phone size is under 350px, made copyright div render ontop of all other divs

--- a/frontend/src/app/layout.component/layout.component.css
+++ b/frontend/src/app/layout.component/layout.component.css
@@ -41,6 +41,7 @@
   position: fixed;
   bottom: 0;
   width: 100%;
+  z-index: 100;
 }
 
 @media screen and (max-width: 600px) {
